added voice to text

--- a/webApp/public/index.html
+++ b/webApp/public/index.html
@@ -20,7 +20,8 @@
             <textarea class="output_display"></textarea>
             <div class="bottom-bar">
                 <button class="button fwd">FWD</button>
-                <textarea class="input_textbox"></textarea>
+                <textarea id="transcript" class="input_textbox"></textarea>
+                <button id="startMic" class="button voice">Voice</button>
                 <button class="button talk">Talk</button>
             </div>
         </div>
