--- a/webApp/public/index.html
+++ b/webApp/public/index.html
@@ -21,8 +21,7 @@
             <div class="bottom-bar">
                 <button class="button fwd">FWD</button>
                 <textarea id="transcript" class="input_textbox"></textarea>
-                <button id="startMic" class="button voice">Voice</button>
-                <button class="button talk">Talk</button>
+                <button id="startMic" class="button voice">Talk</button>
             </div>
         </div>
     </div>
